add auth methods
