# src/controllers/auth/auth.go
@@ -2,11 +2,13 @@ package auth
 
 import (
 	"context"
+	"errors"
 	"net/http"
 	"time"
 
 	"github.com/0B1t322/Magic-Circle/ent"
 	"github.com/0B1t322/Magic-Circle/ent/admin"
+	"github.com/0B1t322/Magic-Circle/ent/superadmin"
 	paylaod "github.com/0B1t322/Magic-Circle/models/jwtpayload"
 	"github.com/0B1t322/Magic-Circle/models/role"
 	jwt "github.com/appleboy/gin-jwt/v2"
@@ -23,6 +25,10 @@ func newLogFields(method string, err error) log.Fields {
 }
 
 var identyKey = "userId"
+
+var (
+	ErrLoginExist = errors.New("Login exist")
+)
 
 type AuthController struct {
 	Client           *ent.Client
@@ -109,7 +115,7 @@ func (a *AuthController) initJwt() {
 						admin.Password(req.Password),
 					),
 				).
-				Only(c)
+					Only(c)
 				if ent.IsNotFound(err) {
 					return nil, jwt.ErrFailedAuthentication
 				} else if err != nil {
@@ -117,8 +123,8 @@ func (a *AuthController) initJwt() {
 				}
 
 				return &paylaod.Payload{
-					ID:   admin.ID,
-					Role: role.ADMIN,
+					ID:          admin.ID,
+					Role:        role.ADMIN,
 					InstituteID: admin.InstituteID,
 				}, nil
 
@@ -139,7 +145,9 @@ func (a *AuthController) initJwt() {
 
 func (a AuthController) initSuperAdmin() {
 	ctx := context.Background()
-	superAdmin, err := a.Client.SuperAdmin.Query().Only(ctx)
+	superAdmin, err := a.Client.SuperAdmin.Query().
+		Where(superadmin.Login(a.SuperAdminLogin)).
+		Only(ctx)
 	if ent.IsNotFound(err) {
 		a.createSuperAdmin(ctx)
 		return
@@ -165,7 +173,7 @@ type LoginResp struct {
 // LoginHandler
 //
 // @Summary login admin or super admin
-// 
+//
 // @Tags auth
 //
 // @Router /v1/auth/login [post]
@@ -186,7 +194,7 @@ func (a AuthController) LoginHandler(c *gin.Context) {
 // @Summary login admin or super admin
 //
 // @Tags auth
-// 
+//
 // @Router /v1/auth/refreshToken [get]
 //
 // @Produce json
@@ -219,7 +227,7 @@ type CreateAdminResp struct {
 // @Accept json
 //
 // @Produce json
-// 
+//
 // @Tags auth
 //
 // @Param body body auth.CreateAdminReq true "body"
@@ -249,6 +257,17 @@ func (a AuthController) CreateAdmin(c *gin.Context) {
 	inst, err := a.Client.Institute.Get(c, req.InstituteID)
 	if ent.IsNotFound(err) {
 		c.String(http.StatusNotFound, "Institute not found")
+		c.Abort()
+		return
+	} else if err != nil {
+		log.WithFields(newLogFields("CreateAdmin", err)).Error("Failed to create Admin")
+		c.String(http.StatusInternalServerError, "Failed to create Admin")
+		c.Abort()
+		return
+	}
+
+	if err := a.loginIsExist(c, req.Login); err == ErrLoginExist {
+		c.String(http.StatusBadRequest, "Admin with this login exisst")
 		c.Abort()
 		return
 	} else if err != nil {
@@ -306,4 +325,342 @@ func (a AuthController) IsAdmin(c *gin.Context) {
 
 func (a AuthController) AuthMiddleare() gin.HandlerFunc {
 	return a.jwtHandlers.MiddlewareFunc()
+}
+
+type GetAdminResp struct {
+	ID    int    `json:"id"`
+	Login string `json:"login"`
+}
+
+type GetAdminsResp struct {
+	Admins []GetAdminResp `json:"admins"`
+}
+
+// GetAdmins
+//
+// @Summary get admins
+//
+// @Router /v1/auth/admin [get]
+//
+// @Produce json
+//
+// @Tags auth
+//
+// @Success 200 {object} auth.GetAdminsResp
+//
+// @Security ApiKeyAuth
+func (a AuthController) GetAdmins(c *gin.Context) {
+	admins, err := a.Client.Admin.Query().All(c)
+	if err != nil {
+		log.WithFields(newLogFields("GetAdmins", err)).Error("Failed to get Admins")
+		c.String(http.StatusInternalServerError, "Failed to get Admins")
+		c.Abort()
+		return
+	}
+
+	var adminsResp GetAdminsResp
+	for _, admin := range admins {
+		adminsResp.Admins = append(adminsResp.Admins, GetAdminResp{ID: admin.ID, Login: admin.Login})
+	}
+
+	c.JSON(
+		http.StatusOK,
+		adminsResp,
+	)
+}
+
+type ChangePasswordReq struct {
+	OldPassword string `json:"oldPassword"`
+	NewPassword string `json:"newPassword"`
+	AdminID     int    `json:"-" uri:"id" swaggerignore:"true"`
+}
+
+// ChangeAdminPassword
+//
+// @Summary change admin password
+//
+// @Description superadmin can pass only new password
+//
+// @Description admin change only their password and should pass their old password
+//
+// @Router /v1/auth/admin/{id} [put]
+//
+// @Param id path integer true "admin id"
+//
+// @Param body body auth.ChangePasswordReq true "body"
+//
+// @Accept json
+//
+// @Produce json
+//
+// @Tags auth
+//
+// @Success 200
+//
+// @Security ApiKeyAuth
+func (a AuthController) ChangeAdminPassword(c *gin.Context) {
+	var req ChangePasswordReq
+	{
+		if err := c.ShouldBindUri(&req); err != nil {
+			c.String(http.StatusBadRequest, "Unexpected id")
+			c.Abort()
+			return
+		}
+
+		if err := c.ShouldBindJSON(&req); err != nil {
+			c.String(http.StatusBadRequest, "Unexpected body")
+			c.Abort()
+			return
+		}
+	}
+
+	admin, err := a.Client.Admin.Get(c, req.AdminID)
+	if ent.IsNotFound(err) {
+		c.String(http.StatusNotFound, "admin not found")
+		c.Abort()
+		return
+	} else if err != nil {
+		log.WithFields(newLogFields("ChangeAdminPassword", err)).Error("Failed to Change Admin Password")
+		c.String(http.StatusInternalServerError, "Failed to Change Admin Password")
+		c.Abort()
+		return
+	}
+
+	claims := jwt.ExtractClaims(c)
+
+	if claims["userId"].(float64) != float64(admin.ID) {
+		c.Status(http.StatusForbidden)
+		c.Abort()
+		return
+	}
+
+	if claims["role"].(string) == string(role.ADMIN) {
+		if req.OldPassword != admin.Password {
+			c.String(http.StatusForbidden, "Old Password not eq password")
+			c.Abort()
+			return
+		}
+	}
+
+	if err := admin.Update().SetPassword(req.NewPassword).Exec(c); err != nil {
+		c.String(http.StatusInternalServerError, "Failed to Change Admin Password")
+		c.Abort()
+		return
+	}
+
+	c.Status(http.StatusOK)
+}
+
+type CreateSuperAdminResp struct {
+	ID    int    `json:"id"`
+	Login string `json:"login"`
+}
+
+
+// CreateSuperAdmin
+//
+// @Summary create super admin
+//
+// @Router /v1/auth/superadmin [post]
+//
+// @Param body body auth.CreateAdminReq true "body"
+//
+// @Accept json
+//
+// @Produce json
+//
+// @Tags auth
+//
+// @Success 200 {object} auth.CreateAdminResp 
+//
+// @Security ApiKeyAuth
+func (a AuthController) CreateSuperAdmin(c *gin.Context) {
+	var req CreateAdminReq
+	{
+		if err := c.ShouldBindJSON(&req); err != nil {
+			log.Info(err)
+			c.String(http.StatusBadRequest, "bad body")
+			c.Abort()
+			return
+		}
+	}
+
+	if err := a.loginIsExist(c, req.Login); err == ErrLoginExist {
+		c.String(http.StatusBadRequest, "SuperAdmin with this login exisst")
+		c.Abort()
+		return
+	} else if err != nil {
+		log.WithFields(newLogFields("CreateSuperAdmin", err)).Error("Failed to create SuperAdmin")
+		c.String(http.StatusInternalServerError, "Failed to create SuperAdmin")
+		c.Abort()
+		return
+	}
+
+	superAdmin, err := a.Client.SuperAdmin.Create().
+		SetLogin(req.Login).
+		SetPassword(req.Password).
+		Save(c)
+	if ent.IsConstraintError(err) {
+		c.String(http.StatusBadRequest, "SuperAdmin with this login exisst")
+		c.Abort()
+		return
+	} else if err != nil {
+		log.WithFields(newLogFields("CreateSuperAdmin", err)).Error("Failed to create SuperAdmin")
+		c.String(http.StatusInternalServerError, "Failed to create SuperAdmin")
+		c.Abort()
+		return
+	}
+
+	c.JSON(
+		http.StatusCreated,
+		CreateAdminResp{
+			ID: superAdmin.ID,
+			Login: superAdmin.Login,
+		},
+	)
+}
+
+// GetSuperAdmins
+//
+// @Summary get admins
+//
+// @Router /v1/auth/superadmin [get]
+//
+// @Produce json
+//
+// @Tags auth
+//
+// @Success 200 {object} auth.GetAdminsResp
+//
+// @Security ApiKeyAuth
+func (a AuthController) GetSuperAdmins(c *gin.Context) {
+	admins, err := a.Client.SuperAdmin.Query().All(c)
+	if err != nil {
+		log.WithFields(newLogFields("GetAdmins", err)).Error("Failed to get Admins")
+		c.String(http.StatusInternalServerError, "Failed to get Admins")
+		c.Abort()
+		return
+	}
+
+	var adminsResp GetAdminsResp
+	for _, admin := range admins {
+		adminsResp.Admins = append(adminsResp.Admins, GetAdminResp{ID: admin.ID, Login: admin.Login})
+	}
+
+	c.JSON(
+		http.StatusOK,
+		adminsResp,
+	)	
+}
+
+type DeleteAdminReq struct {
+	ID	int `uri:"id"`
+}
+
+// DeleteAdmin
+//
+// @Summary delete admin
+//
+// @Router /v1/auth/admin/{id} [delete]
+//
+// @Produce json
+//
+// @Tags auth
+//
+// @Success 200
+//
+// @Security ApiKeyAuth
+func (a AuthController) DeleteAdmin(c *gin.Context) {
+	var req DeleteAdminReq
+	{
+		if err := c.ShouldBindUri(&req); err != nil {
+			c.String(http.StatusBadRequest, "Unexpected id")
+			c.Abort()
+			return
+		}
+	}
+
+	err := a.Client.Admin.DeleteOneID(req.ID).Exec(c)
+	if ent.IsNotFound(err) {
+		c.String(http.StatusNotFound, "admin not found")
+		c.Abort()
+		return		
+	} else if err != nil {
+		c.String(http.StatusInternalServerError, "failed to delete admin")
+		c.Abort()
+		return
+	}
+
+	c.Status(http.StatusOK)
+}
+
+// DeleteSuperAdmin
+//
+// @Summary delete super admin
+//
+// @Router /v1/auth/superadmin/{id} [delete]
+//
+// @Produce json
+//
+// @Tags auth
+//
+// @Success 200
+//
+// @Security ApiKeyAuth
+func (a AuthController) DeleteSuperAdmin(c *gin.Context) {
+	var req DeleteAdminReq
+	{
+		if err := c.ShouldBindUri(&req); err != nil {
+			c.String(http.StatusBadRequest, "Unexpected id")
+			c.Abort()
+			return
+		}
+	}
+
+	claims := jwt.ExtractClaims(c)
+
+	if claims["userId"].(float64) == float64(req.ID) {
+		c.String(http.StatusBadRequest, "You can't delete yourself")
+		c.Abort()
+		return
+	}
+
+	err := a.Client.SuperAdmin.DeleteOneID(req.ID).Exec(c)
+	if ent.IsNotFound(err) {
+		c.String(http.StatusNotFound, "admin not found")
+		c.Abort()
+		return		
+	} else if err != nil {
+		c.String(http.StatusInternalServerError, "failed to delete admin")
+		c.Abort()
+		return
+	}
+
+	c.Status(http.StatusOK)
+}
+
+func (a AuthController) loginIsExist(ctx context.Context, login string) error {
+	_, err := a.Client.Admin.Query().Where(
+		admin.Login(login),
+	).Only(ctx)
+	if ent.IsNotFound(err) {
+		// Pass
+	} else if err != nil {
+		return err
+	} else if err == nil {
+		return ErrLoginExist
+	}
+
+	_, err = a.Client.SuperAdmin.Query().Where(
+		superadmin.Login(login),
+	).Only(ctx)
+	if ent.IsNotFound(err) {
+		// Pass
+	} else if err != nil {
+		return err
+	} else if err == nil {
+		return ErrLoginExist
+	}
+
+	return nil
 }
